# VOC

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  package-lock.json  package.json  release-check.ps1  release-tag.ps1  run-mvp.ps1  smoke-mvp.ps1  start-api.ps1  stop-mvp.ps1
.github/: pull_request_template.md
.github/workflows/: api-contract-check.yml  mvp-smoke.yml  release-check.yml
app/: globals.css  layout.tsx
app/dashboard/: page.tsx
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/v1/: datasource.py  jobs.py  label_nodes.py  label_taxonomies.py  labels.py  monitoring.py  prompts.py  router.py  settings.py
backend/app/core/: config.py  time_utils.py
backend/app/db/: init_db.py  session.py
backend/app/models/: __init__.py  audit.py  config.py  monitoring.py  runtime.py
backend/app/schemas/: __init__.py  datasource.py  job.py  label.py  monitoring.py  prompt.py  settings.py  taxonomy.py
backend/app/services/: pipeline_runner.py
backend/app/tasks/: scheduler.py
backend/app/workers/: celery_app.py
backend/contracts/: openapi.snapshot.json
backend/scripts/: check_openapi_snapshot.py
backend/tests/: conftest.py  test_label_nodes_api.py  test_label_taxonomies_api.py  test_monitoring_settings_apis.py  test_pipeline_execution_service.py
docs/: TODO.md  bootstrap-runbook.md  branch-log.md  release-notes-template.md  release-runbook.md  voc-ai-labeling-platform-design.md
frontend/: index.html  package-lock.json  package.json  setup-deps.ps1  tailwind.config.js  tsconfig.json  vite.config.ts
lib/: utils.ts
(+68 files in other folders)
