[project]
name = "voc-platform-backend"
version = "0.1.0"
description = "LLM-based VOC labeling platform backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.1",
  "uvicorn[standard]>=0.35.0",
  "sqlalchemy>=2.0.43",
  "pydantic>=2.11.7",
  "pydantic-settings>=2.11.0",
  "alembic>=1.16.5",
  "redis>=6.4.0",
  "celery>=5.5.3",
  "apscheduler>=3.11.0",
  "python-multipart>=0.0.20"
]

[tool.uv]
dev-dependencies = [
  "pytest>=8.4.2"
]
